fix: show Modal z-index

--- a/src/components/CrackerConstructor/cracker-constructor.scss
+++ b/src/components/CrackerConstructor/cracker-constructor.scss
@@ -35,11 +35,11 @@
         width: 50%;
         height: 100%;
         position: absolute;
-        z-index: 100;
+        z-index: 5;
       }
 
       .about{
-        z-index: 10000;
+        z-index: 10;
         position: relative;
 
         .about__text{
